[package]
name = "chest"
description = "A multiplatform CLI command organizer"
version = "0.1.0"
authors = ["Wayan-Gwie Lapointe <wayangwie@gmail.com>"]
repository = "https://github.com/Dauthdaert/chest"
license = "MIT"
edition = "2021"
exclude = ["tools/**/*", ".github/**/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["./", "tools/ci"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Config for 'cargo release'
[workspace.metadata.release]
# We don't want to publish to crates.io
publish = false
# Only cut a release from main
allow-branch = ["main"]
# Word replacements to do whilst cutting a release
pre-release-replacements = [
  {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  #{file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  #{file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/cargo-release/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
crossterm = "0.27"
tui = { package = "ratatui", version = "0.23" }
tui-input = "0.8"
better-panic = "0.3.0"
async-std = "1.12"
sqlx = { version = "0.7", features = [ "runtime-async-std", "sqlite" ] }
directories = "5.0"
log = { version = "0.4", features = ["std"] }
simplelog = "0.12"
clap = { version = "4.4.6", features = ["derive"] }
promptly = "0.3.1"
