[package]
name = "chest-rs"
description = "A multiplatform CLI command organizer"
version = "0.2.0"
authors = ["Wayan-Gwie Lapointe"]
repository = "https://github.com/Dauthdaert/chest"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = ["tools/**/*", ".github/**/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["./", "tools/ci"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Config for 'cargo release'
[workspace.metadata.release]
# Only cut a release from main
allow-branch = ["main"]
# Word replacements to do whilst cutting a release
pre-release-replacements = [
  { file = "README.md", search = "Current release: [a-z0-9\\.-]+", replace = "Current release: {{version}}" },
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\r\n## [Unreleased] - ReleaseDate\r\n", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\r\n[Unreleased]: https://github.com/Dauthdaert/chest/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[[bin]]
name = "chest"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
tui = { package = "ratatui", version = "0.25" }
tui-input = "0.8"
better-panic = "0.3.0"
async-std = "1.12"
sqlx = { version = "0.7", features = ["runtime-async-std", "sqlite"] }
directories = "5.0"
log = { version = "0.4", features = ["std"] }
simplelog = "0.12"
clap = { version = "4.4.18", features = ["derive"] }
promptly = "0.3.1"
regex = "1.10.4"
anyhow = "1.0.79"
