[package]
name = "chest-rs"
description = "A multiplatform CLI command organizer"
version = "0.3.1"
authors = ["Wayan-Gwie Lapointe"]
repository = "https://github.com/Dauthdaert/chest"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = ["tools/**/*", ".github/**/*"]

[package.metadata.wix]
upgrade-guid = "14FED4CD-93E3-4A42-9911-30D48FBAC21D"
path-guid = "8F8F8D08-04A9-44F4-A09B-A91375749619"
license = false
eula = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["./", "tools/ci"]

# Config for 'cargo release'
[workspace.metadata.release]
# Only cut a release from main
allow-branch = ["main"]
# Word replacements to do whilst cutting a release
pre-release-replacements = [
  { file = "README.md", search = "Current release: [a-z0-9\\.-]+", replace = "Current release: {{version}}" },
  { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
  { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
  { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\r\n## [Unreleased] - ReleaseDate\r\n", exactly = 1 },
  { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\r\n[Unreleased]: https://github.com/Dauthdaert/chest/compare/{{tag_name}}...HEAD", exactly = 1 },
]

[[bin]]
name = "chest"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
tui = { package = "ratatui", version = "0.29" }
tui-input = "0.11"
better-panic = "0.3.0"
async-std = "1.13"
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite"] }
directories = "5.0"
log = { version = "0.4", features = ["std"] }
simplelog = "0.12"
clap = { version = "4.5.23", features = ["derive"] }
promptly = "0.3.1"
regex = "1.11.1"
anyhow = "1.0.94"
